fixed alignment of options in message box

--- a/dev/assets/css/modules/_message-box.css
+++ b/dev/assets/css/modules/_message-box.css
@@ -21,7 +21,7 @@
   }
 
   &__options {
-
+    text-align: center;
   }
 
   &--slide-in {
